# vTools_Interface

./: README.md  _redirects  dummy.xlsx  package-lock.json  package.json  pyproject.toml  svelte.config.js
api/: pyproject.toml
api/src/: main.py  xlsxScraper.py
api/src/config/: config.json
interface/: package-lock.json  package.json
interface/src/: app.css  app.html
interface/src/lib/: config.ts
interface/src/lib/components/: header.svelte  input-select.svelte  process-contacts-file.svelte  tool-card.svelte  upload-file.svelte
interface/src/lib/models/: dto.ts
interface/src/lib/utils/: string-utils.ts
interface/src/routes/: +layout.svelte  +page.svelte
interface/src/routes/generateContacts/: +page.svelte
interface/src/routes/home/: +page.svelte  +page.ts
src/: app.css  app.html  main.py  xlsxScraper.py
src/lib/: api-call.ts  config.ts
src/lib/components/: header.svelte  process-contacts-file.svelte  tool-title.svelte  upload-file.svelte
src/routes/: +layout.svelte
src/routes/generateContacts/: +page.svelte
src/routes/home/: +page.svelte
