[tool.poetry]
name = "api"
version = "0.1.0"
description = "Simple tool to convert Excel data sheet into VCF card to save a lot of contacts rapidly."
authors = ["Gabriele Iovino <gabrieleiovino839@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
main = "api.src.main:main"


[tool.poetry.dependencies]
python = ">=3.9,<=3.13.2"
pandas = ">=2.2.3,<3.0.0"
pathlib = "^1.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
